fix frequent deadlocks on Windows

With a desktop OpenGL build of Qt we encountered frequent deadlocks
when creating OpenGL contexts.
Initialize the context directly on the calling thread instead
of the browser thread and do not synchronize with the browser thread.

Task-number: QTBUG-48276
Change-Id: I0970c66cb230881cdc53f22d4a255ea08e6fe63a
Reviewed-by: Michael Brüning <michael.bruning@theqtcompany.com>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@theqtcompany.com>